added hover to glasses icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>Sharon Frajlich</title>
   </head>
   <body>
     <!--START MENU BAR-->
@@ -15,7 +15,12 @@
           <img class="img-logo" src="sharon.png">
         </div>
         <div class="link-icons">
-          <img class="img-icon" id="first-icon" src="glasses-icon.png">
+          <div class="img-container-1">
+            <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
+            <div class="overlay">
+              <div class="text-1"><b>About</b></div>
+            </div>
+          </div>
           <img class="img-icon" src="pencil-icon.png">
           <img class="img-icon" id="book-icon" src="book-icon.png">
         </div>
