added hover css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <div class="img-container-1">
             <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
             <div class="overlay">
-              <div class="text-1"><b>About</b></div>
+              <div class="text-1"><b>about</b></div>
             </div>
           </div>
           <img class="img-icon" src="pencil-icon.png">
@@ -27,4 +27,3 @@
       </div>
     </div>
   </body>
-</html>
