added paragraph div

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <title>Sharon Frajlich</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   </head>
   <body>
     <!--START MENU BAR-->
@@ -24,6 +25,19 @@
           <img class="img-icon" src="pencil-icon.png">
           <img class="img-icon" id="book-icon" src="book-icon.png">
         </div>
+      </div>
+    <!--Start Body Content-->
+      <div class="about-content" id="slide1">
+        <h1 class="content-header">some text</h1>
+        <p class="paragraph-content">a lot more text</p>
+      </div>
+      <div class="work-content" id="slide2">
+        <h1 class="content-header">Another Header</h1>
+        <p class="paragraph-content">Another text paragraph</p>
+      </div>
+      <div class="contact-content" id="slide3">
+        <h1 class="content-header">Some more text!</h1>
+        <p class="paragraph-content">A LOT MORE TEXT!</p>
       </div>
     </div>
   </body>
