added overlay onto second icon

--- a/index.html
+++ b/index.html
@@ -19,17 +19,25 @@
           <div class="img-container-1">
             <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
             <div class="overlay">
-              <div class="text-1" id="text-1"><a href="#" onclick='showDiv()'><b>about</b></a></div>
+              <div class="text-1" id="text-1"><a href="#about-scroll-box" onclick='showDiv()'><b>about</b></a></div>
             </div>
           </div>
-          <img class="img-icon" src="pencil-icon.png">
+          <div class="img-container-2">
+            <img class="img-icon" alt="pencil-icon" id="second-icon" src="pencil-icon.png">
+            <div class="overlay2">
+              <div class="text-2" id="text-2"><a href="#work-cont"><b>work</b></a></div>
+              </div>
+            </div>
+          </div>
           <img class="img-icon" id="book-icon" src="book-icon.png">
         </div>
       </div>
     <!--Start Body Content-->
-      <div class="panel-content" id="about-cont" style="display:none">
-        <h1 class="content-header">some text</h1>
-        <p class="paragraph-content">a lot more text</p>
+      <div class="content-scroll-box" id="about-scroll-box">
+        <div class="panel-content" id="about-cont" style="display:none">
+          <h1 class="content-header">some text</h1>
+          <p class="paragraph-content">a lot more text</p>
+        </div>
       </div>
       <div class="panel-content" id="work-cont">
         <h1 class="content-header">Another Header</h1>
