added second div

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="img-container-2">
             <img class="img-icon" alt="pencil-icon" id="second-icon" src="pencil-icon.png">
             <div class="overlay2">
-              <div class="text-2" id="text-2"><a href="#work-cont"><b>work</b></a></div>
+              <div class="text-2" id="text-2"><a href="#work-scroll-box"><b>work</b></a></div>
               </div>
             </div>
           </div>
@@ -39,9 +39,11 @@
           <p class="paragraph-content">a lot more text</p>
         </div>
       </div>
-      <div class="panel-content" id="work-cont">
-        <h1 class="content-header">Another Header</h1>
-        <p class="paragraph-content">Another text paragraph</p>
+      <div class="work-scroll-box" id="work-scroll-box">
+        <div class="panel-content" id="work-cont">
+          <h1 class="content-header">Another Header</h1>
+          <p class="paragraph-content">Another text paragraph</p>
+        </div>
       </div>
       <div class="panel-content" id="contact-cont">
         <h1 class="content-header">Some more text!</h1>
