--- a/index.html
+++ b/index.html
@@ -3,67 +3,69 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sharon Frajlich</title>
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
   </head>
   <body>
     <!--START MENU BAR-->
-    <div class="background-content">
-      <img src="pattern.png" id="background-image">
-      <!--START MENU BAR-->
-      <div class="menu" id="left-menu-panel">
-        <div class="header-logo">
-          <img class="img-logo" src="sharon.png">
-        </div>
-        <div class="link-icons">
-          <div class="img-container-1">
-            <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
-            <div class="overlay">
-              <div class="text-1" id="text-1"><a href="#about-container" onclick='showDiv()'><b>about</b></a></div>
-            </div>
+    <div class="menu" id="left-menu-panel">
+      <img class="img-logo img-icon" src="sharon.png">
+      <div class="link-icons">
+        <div class="img-container-1">
+          <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
+          <div class="overlay">
+            <div class="text-1" id="text-1"><a href="#about-container" onclick='showDiv()'><b>about</b></a></div>
           </div>
-          <div class="img-container-2">
-            <img class="img-icon" alt="pencil-icon" id="second-icon" src="pencil-icon.png">
-            <div class="overlay2">
-              <div class="text-2" id="text-2"><a href="#work-container"><b>work</b></a></div>
-              </div>
-            </div>
-          <div class="img-container-3">
-            <img class="img-icon" id="book-icon" src="book-icon.png">
-            <div class="overylay3">
-              <div class="text-3" id="text-3"><a href="#contact-container"><b>contact</b></a></div>
-            </div>
+        </div>
+        <div class="img-container-2">
+          <img class="img-icon" alt="pencil-icon" id="second-icon" src="pencil-icon.png">
+          <div class="overlay2">
+            <div class="text-2" id="text-2"><a href="#work-container"><b>work</b></a></div>
+          </div>
+        </div>
+        <div class="img-container-3">
+          <img class="img-icon" id="book-icon" src="book-icon.png">
+          <div class="overylay3">
+            <div class="text-3" id="text-3"><a href="#contact-container"><b>contact</b></a></div>
           </div>
         </div>
       </div>
     </div>
+    <!-- </div> -->
     <!--Start Body Content-->
-    <div class="content-scroll-box" id="about-container">
-      <div class="panel-content" id="about-cont" style="display:none">
-        <h1 class="content-header">about</h1>
-        <br></br>
-        <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quibusnam praeteritis? Certe non potest. Duo Reges: constructio interrete. De illis, cum volemus. Tum ille: Ain tandem? Tecum optime, deinde etiam cum mediocri amico.</p>
-        <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
-        <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
+    <div class="body-content">
+      <img src="pattern.png" class="body-background">
+      <div class="content-scroll-box" id="about-container">
+        <div class="panel-content" id="about-cont" style="display:none">
+          <h1 class="content-header">about</h1>
+          <br></br>
+          <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quibusnam praeteritis? Certe non potest. Duo Reges: constructio interrete. De illis, cum volemus. Tum ille: Ain tandem? Tecum optime, deinde etiam cum mediocri amico.</p>
+          <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
+          <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
+        </div>
+      </div>
+      <div class="work-container" id="work-container">
+        <div class="panel-content" id="work-cont">
+          <h1 class="content-header">work</h1>
+          <br></br>
+          <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quibusnam praeteritis? Certe non potest. Duo Reges: constructio interrete. De illis, cum volemus. Tum ille: Ain tandem? Tecum optime, deinde etiam cum mediocri amico.</p>
+          <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
+          <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
+        </div>
+      </div>
+      <div class="contact-scroll-box" id="contact-scroll-box">
+        <div class="panel-content" id="contact-cont">
+          <h1 class="content-header">contact</h1>
+          <br></br>
+          <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quibusnam praeteritis? Certe non potest. Duo Reges: constructio interrete. De illis, cum volemus. Tum ille: Ain tandem? Tecum optime, deinde etiam cum mediocri amico.</p>
+          <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
+          <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
+        </div>
       </div>
     </div>
-    <div class="work-scroll-box" id="work-scroll-box">
-      <div class="panel-content" id="work-cont">
-        <h1 class="content-header">work</h1>
-        <br></br>
-        <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quibusnam praeteritis? Certe non potest. Duo Reges: constructio interrete. De illis, cum volemus. Tum ille: Ain tandem? Tecum optime, deinde etiam cum mediocri amico.</p>
-        <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
-        <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
-      </div>
-    </div>
-    <div class="contact-scroll-box" id="contact-scroll-box">
-      <div class="panel-content" id="contact-cont">
-        <h1 class="content-header">contact</h1>
-        <br></br>
-        <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quibusnam praeteritis? Certe non potest. Duo Reges: constructio interrete. De illis, cum volemus. Tum ille: Ain tandem? Tecum optime, deinde etiam cum mediocri amico.</p>
-        <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
-        <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
-      </div>
-    </div>
+    <script
+     src="https://code.jquery.com/jquery-3.1.1.min.js"
+     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+     crossorigin="anonymous"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
