fixed mobile header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!--START MENU BAR-->
     <div class="menu" id="left-menu-panel">
-      <img class="img-logo img-icon" src="sharon.png">
+      <img class="img-logo img-icon" id="sharon-logo" src="sharon.png">
       <div class="link-icons">
         <div class="img-container-1">
           <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
@@ -64,8 +64,8 @@
       </div>
     </div>
     <script
-     src="https://code.jquery.com/jquery-3.1.1.min.js"
-     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-     crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.2.0.min.js"
+      integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I="
+      crossorigin="anonymous"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
