--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <!--START MENU BAR-->
     <div class="menu" id="left-menu-panel">
       <img class="img-logo img-icon" id="sharon-logo" src="sharon.png">
+      <button type="button" name="button" class="hamburger-button">&#9776;</button>
+      <div class="hamburger-menu-list">
+        <ul>
+          <a href="#"><li>about</li></a>
+          <a href="#"><li>work</li></a>
+          <a href="#"><li>contact</li></a>
+        </ul>
+      </div>
       <div class="link-icons">
         <div class="img-container-1">
           <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
