styled hamburger nav

--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
     <div class="menu" id="left-menu-panel">
       <img class="img-logo img-icon" id="sharon-logo" src="sharon.png">
       <button type="button" name="button" class="hamburger-button">&#9776;</button>
-      <div class="hamburger-menu-list">
-        <ul>
-          <a href="#"><li>about</li></a>
-          <a href="#"><li>work</li></a>
-          <a href="#"><li>contact</li></a>
-        </ul>
-      </div>
       <div class="link-icons">
         <div class="img-container-1">
           <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
@@ -39,10 +32,17 @@
         </div>
       </div>
     </div>
+    <nav class="hamburger-menu-list">
+      <ul>
+        <a href="#"><li id="about-link">about</li></a>
+        <a href="#"><li id="work-link">work</li></a>
+        <a href="#"><li id="contact-link">contact</li></a>
+      </ul>
+    </nav>
     <!-- </div> -->
     <!--Start Body Content-->
     <div class="body-content">
-      <img src="pattern.png" class="body-background">
+      <!-- <img src="pattern.png" class="body-background"> -->
       <div class="content-scroll-box" id="about-container">
         <div class="panel-content" id="about-cont" style="display:none">
           <h1 class="content-header">about</h1>
