added additional styling

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
     <!--Start Body Content-->
     <div class="body-content">
       <!-- <img src="pattern.png" class="body-background"> -->
-      <div class="content-scroll-box" id="about-container">
-        <div class="panel-content" id="about-cont" style="display:none">
+      <!-- <div class="content-scroll-box" id="about-container"> -->
+        <div class="panel-content" id="about-cont">
           <h1 class="content-header">about</h1>
-          <br></br>
-          <p class="paragraph-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quibusnam praeteritis? Certe non potest. Duo Reges: constructio interrete. De illis, cum volemus. Tum ille: Ain tandem? Tecum optime, deinde etiam cum mediocri amico.</p>
-          <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
-          <p class="paragraph-content">Nihil opus est exemplis hoc facere longius. Dici enim nihil potest verius. Memini vero, inquam; Idemne, quod iucunde? Quid, quod res alia tota est? Ut aliquid scire se gaudeant?</p>
+          <h2 class="second-header">Nearsighted copy editor and writer based in Seattle. </p>
+          <p class="paragraph-content">"When you edit, you're willing to stay up all night and then be slapped in the face." Judith Jones</p>
+          <p class="paragraph-content">As a copy editor, I advocate for both the reader and the writer. My job is to make certain the story is understood, the voice is consistent, and the text is error-free. When I'm not proofreading or editing marketing, advertising or promotional copy I'm writing and reading short stories or throwing vessels on the potter's wheel.
+I hold a BS in Journalism and French from the University of Miami, as well as a Copyediting Certification from the University of Washington. I typically listen to shoegaze, folk-rock or jazz while working with words and often reward myself with pie and/or ice cream intermissions.</p>
         </div>
-      </div>
+      <!-- </div> -->
       <div class="work-container" id="work-container">
         <div class="panel-content" id="work-cont">
           <h1 class="content-header">work</h1>
