added desktop styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="img-container-1">
           <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
           <div class="overlay">
-            <div class="text-1" id="text-1"><a href="#about-container" onclick='showDiv()'><b>about</b></a></div>
+            <div class="text-1" id="text-1"><b>about</b></div>
           </div>
         </div>
         <div class="img-container-2">
@@ -63,7 +63,7 @@
       <!-- <div class="contact-scroll-box" id="contact-scroll-box"> -->
         <div class="panel-content" id="contact-cont">
           <h1 class="content-header">contact</h1>
-          <p class="paragraph-content">I'd love to help you tell your story. Email me with any questions, pitches, ideas, the works. </p>
+          <p class="paragraph-content">I'd love to help you tell your story. Email me with any questions, pitches, ideas, the works.</p>
         </div>
       <!-- </div> -->
     </div>
