--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="img-container-1">
           <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
           <div class="overlay">
-            <div class="text-1" id="text-1"><b>about</b></div>
+            <div class="text-1" id="text-1"><a href="#about-container"><b>about</b></a></div>
           </div>
         </div>
         <div class="img-container-2">
@@ -25,8 +25,8 @@
           </div>
         </div>
         <div class="img-container-3">
-          <img class="img-icon" id="book-icon" src="book-icon.png">
-          <div class="overylay3">
+          <img class="img-icon" alt="book-icon" id="book-icon" src="book-icon.png">
+          <div class="overlay3">
             <div class="text-3" id="text-3"><a href="#contact-container"><b>contact</b></a></div>
           </div>
         </div>
@@ -45,8 +45,8 @@
       <!-- <img src="pattern.png" class="body-background"> -->
       <!-- <div class="content-scroll-box" id="about-container"> -->
         <div class="panel-content" id="about-cont">
-          <h1 class="content-header">about</h1>
-          <h2 class="second-header">Nearsighted copy editor and writer based in Seattle. </p>
+          <h1 class="content-header" id="desk-header">about</h1>
+          <h2 class="second-header" id="desk-lower">Nearsighted copy editor and writer based in Seattle. </p>
           <p class="paragraph-content">"When you edit, you're willing to stay up all night and then be slapped in the face." Judith Jones</p>
           <p class="paragraph-content">As a copy editor, I advocate for both the reader and the writer. My job is to make certain the story is understood, the voice is consistent, and the text is error-free. When I'm not proofreading or editing marketing, advertising or promotional copy I'm writing and reading short stories or throwing vessels on the potter's wheel.</p>
           <p class="paragraph-content">I hold a BS in Journalism and French from the University of Miami, as well as a Copyediting Certification from the University of Washington. I typically listen to shoegaze, folk-rock or jazz while working with words and often reward myself with pie and/or ice cream intermissions.</p>
