--- a/index.html
+++ b/index.html
@@ -45,26 +45,26 @@
       <!-- <img src="pattern.png" class="body-background"> -->
       <!-- <div class="content-scroll-box" id="about-container"> -->
         <div class="panel-content" id="about-cont">
-          <h1 class="content-header" id="desk-header">about.</h1>
-          <h2 class="second-header" id="desk-lower"> Nearsighted copy editor and writer based in Seattle. </p>
-          <p class="paragraph-content">"When you edit, you're willing to stay up all night and then be slapped in the face." Judith Jones</p>
-          <p class="paragraph-content">As a copy editor, I advocate for both the reader and the writer. My job is to make certain the story is understood, the voice is consistent, and the text is error-free. When I'm not proofreading or editing marketing, advertising or promotional copy I'm writing and reading short stories or throwing vessels on the potter's wheel.</p>
-          <p class="paragraph-content">I hold a BS in Journalism and French from the University of Miami, as well as a Copyediting Certification from the University of Washington. I typically listen to shoegaze, folk-rock or jazz while working with words and often reward myself with pie and/or ice cream intermissions.</p>
+          <h1 class="content-header mob-header" id="desk-header">about.</h1>
+          <h2 class="second-header mob-lower" id="desk-lower"> Nearsighted copy editor and writer based in Seattle. </p>
+          <p class="paragraph-content mob-p">"When you edit, you're willing to stay up all night and then be slapped in the face." Judith Jones</p>
+          <p class="paragraph-content mob-p">As a copy editor, I advocate for both the reader and the writer. My job is to make certain the story is understood, the voice is consistent, and the text is error-free. When I'm not proofreading or editing marketing, advertising or promotional copy I'm writing and reading short stories or throwing vessels on the potter's wheel.</p>
+          <p class="paragraph-content mob-p">I hold a BS in Journalism and French from the University of Miami, as well as a Copyediting Certification from the University of Washington. I typically listen to shoegaze, folk-rock or jazz while working with words and often reward myself with pie and/or ice cream intermissions.</p>
         </div>
       <!-- </div> -->
       <!-- <div class="work-container" id="work-container"> -->
         <div class="panel-content" id="work-cont">
-          <h1 class="content-header" id="desk-header">work.</h1>
-          <p class="paragraph-content">I have over five years of experience as a copy editor and writer in e-commerce, advertising, marketing, book publishing, and news media. I'm currently a proofreader for Starbucks, making sure every package, promotion, sign, and menu is in pristine written condition.</p>
-          <p class="paragraph-content">Previous employers include Fantagraphics, Capitol Hill Times, zulily, Madrona Venture Group, and Haute Living Magazine. I'm versatile when it comes to the oxford comma.</p>
-          <p class="paragraph-content">I offer a variety of freelance services, including line editing, copyediting, and proofreading. I'm also fluent in Spanish and French with experience in translation and localization editing. Articles, short stories, comics, zines, and ad copy are some of my preferred content. Reach out for an estimate!</p>
+          <h1 class="content-header mob-header" id="desk-header">work.</h1>
+          <p class="paragraph-content mob-p">I have over five years of experience as a copy editor and writer in e-commerce, advertising, marketing, book publishing, and news media. I'm currently a proofreader for Starbucks, making sure every package, promotion, sign, and menu is in pristine written condition.</p>
+          <p class="paragraph-content mob-p">Previous employers include Fantagraphics, Capitol Hill Times, Zulily, Madrona Venture Group, and Haute Living Magazine. I'm versatile when it comes to the Oxford comma.</p>
+          <p class="paragraph-content mob-p">I offer a variety of freelance services, including line editing, copyediting, and proofreading. I'm also fluent in Spanish and French with experience in translation and localization editing. Articles, short stories, comics, zines, and ad copy are some of my preferred content. Reach out for an estimate!</p>
         </div>
       <!-- </div> -->
       <!-- <div class="contact-scroll-box" id="contact-scroll-box"> -->
         <div class="panel-content" id="contact-cont">
-          <h1 class="content-header" id="desk-header">contact.</h1>
-          <h2 class="lower-header" id="lower">I'd love to help you tell your story. Email me with any questions, pitches, ideas, the works.</h2>
-          <p id="email-paragraph">sfrajlich@gmail.com</p>
+          <h1 class="content-header mob-header" id="desk-header">contact.</h1>
+          <h2 class="lower-header mob-p" id="lower">I'd love to help you tell your story. Email me with any questions, pitches, ideas, the works.</h2>
+          <p class="mob-email" id="email-paragraph">sfrajlich@gmail.com</p>
         </div>
       <!-- </div> -->
     </div>
