--- a/index.html
+++ b/index.html
@@ -68,9 +68,12 @@
         </div>
       <!-- </div> -->
     </div>
+    <!-- <section class="footer">
+      <footer class = "footer-content"></footer>
+    </section> -->
     <script
-      src="https://code.jquery.com/jquery-3.2.0.min.js"
-      integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I="
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
