--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- <div class="content-scroll-box" id="about-container"> -->
         <div class="panel-content" id="about-cont">
           <h1 class="content-header mob-header" id="desk-header">about.</h1>
-          <h2 class="second-header mob-lower" id="desk-lower"> Nearsighted copy editor and writer based in Seattle. </p>
+          <h2 class="second-header mob-lower" id="desk-lower"> Nearsighted copy editor and writer based in Seattle. </h2>
           <p class="paragraph-content mob-p">"When you edit, you're willing to stay up all night and then be slapped in the face." Judith Jones</p>
           <p class="paragraph-content mob-p">As a copy editor, I advocate for both the reader and the writer. My job is to make certain the story is understood, the voice is consistent, and the text is error-free. When I'm not proofreading or editing marketing, advertising or promotional copy I'm writing and reading short stories or throwing vessels on the potter's wheel.</p>
           <p class="paragraph-content mob-p">I hold a BS in Journalism and French from the University of Miami, as well as a Copyediting Certification from the University of Washington. I typically listen to shoegaze, folk-rock or jazz while working with words and often reward myself with pie and/or ice cream intermissions.</p>
