--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <!--START MENU BAR-->
     <section class="menu" id="left-menu-panel">
-      <img class="img-logo img-icon" id="sharon-logo" src="sharon.png">
-      <button type="button" name="button" class="hamburger-button">&#9776;</button>
+      <img class="img-logo img-icon menu-icon" id="sharon-logo" src="sharon.png">
+      <button type="button" name="button" class="hamburger-button menu-icon">&#9776;</button>
       <div class="link-icons">
         <div class="img-container-1">
           <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
