--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <div class="img-container-1">
           <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
           <div class="overlay">
-            <div class="text-1" id="text-1"><a href="#about-container"><b>about</b></a></div>
+            <div class="text-1" id="text-1"><a href="#"><b>about</b></a></div>
           </div>
         </div>
         <div class="img-container-2">
           <img class="img-icon" alt="pencil-icon" id="second-icon" src="pencil-icon.png">
           <div class="overlay2">
-            <div class="text-2" id="text-2"><a href="#work-container"><b>work</b></a></div>
+            <div class="text-2" id="text-2"><a href="#"><b>work</b></a></div>
           </div>
         </div>
         <div class="img-container-3">
           <img class="img-icon" alt="book-icon" id="book-icon" src="book-icon.png">
           <div class="overlay3">
-            <div class="text-3" id="text-3"><a href="#contact-container"><b>contact</b></a></div>
+            <div class="text-3" id="text-3"><a href="#"><b>contact</b></a></div>
           </div>
         </div>
       </div>
