added SMACSS styling

--- a/index.html
+++ b/index.html
@@ -2,30 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/modules.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <title>Sharon Frajlich</title>
   </head>
   <body>
     <!--START MENU BAR-->
     <section class="menu" id="left-menu-panel">
-      <img class="img-logo img-icon menu-icon" id="sharon-logo" src="sharon.png">
+      <img class="img-logo img-icon menu-icon" id="sharon-logo" src="assets/sharon.png">
       <button type="button" name="button" class="hamburger-button menu-icon">&#9776;</button>
       <div class="link-icons">
         <div class="img-container-1">
-          <img class="img-icon" alt="glass-icon" id="first-icon" src="glasses-icon.png">
+          <img class="img-icon" alt="glass-icon" id="first-icon" src="assets/glasses-icon.png">
           <div class="overlay">
             <div class="text-1" id="text-1"><a href="#"><b>about</b></a></div>
           </div>
         </div>
         <div class="img-container-2">
-          <img class="img-icon" alt="pencil-icon" id="second-icon" src="pencil-icon.png">
+          <img class="img-icon" alt="pencil-icon" id="second-icon" src="assets/pencil-icon.png">
           <div class="overlay2">
             <div class="text-2" id="text-2"><a href="#"><b>work</b></a></div>
           </div>
         </div>
         <div class="img-container-3">
-          <img class="img-icon" alt="book-icon" id="book-icon" src="book-icon.png">
+          <img class="img-icon" alt="book-icon" id="book-icon" src="assets/book-icon.png">
           <div class="overlay3">
             <div class="text-3" id="text-3"><a href="#"><b>contact</b></a></div>
           </div>
