added images and updated copy

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="img-container-2">
           <img class="img-icon" alt="pencil-icon" id="second-icon" src="assets/pencil-icon.png">
           <div class="overlay2">
-            <div class="text-2" id="text-2"><a href="#"><b>work</b></a></div>
+            <div class="text-2" id="text-2"><a href="#"><b>experience</b></a></div>
           </div>
         </div>
         <div class="img-container-3">
@@ -38,7 +38,7 @@
     <nav class="hamburger-menu-list">
       <ul>
         <a href="#"><li id="about-link">about</li></a>
-        <a href="#"><li id="work-link">work</li></a>
+        <a href="#"><li id="work-link">experience</li></a>
         <a href="#"><li id="contact-link">contact</li></a>
       </ul>
     </nav>
@@ -49,24 +49,39 @@
       <!-- <div class="content-scroll-box" id="about-container"> -->
         <div class="panel-content" id="about-cont">
           <h1 class="content-header mob-header" id="desk-header">about</h1>
-          <h2 class="second-header mob-lower" id="desk-lower"> Nearsighted copy editor and writer based in Seattle. </h2>
+          <h2 class="second-header mob-lower" id="desk-lower"><strong>Copy editor and writer with five years editorial experience.</strong></h2>
           <p class="paragraph-content mob-p">"When you edit, you're willing to stay up all night and then be slapped in the face." Judith Jones</p>
-          <p class="paragraph-content mob-p">As a copy editor, I advocate for both the reader and the writer. My job is to make certain the story is understood, the voice is consistent, and the text is error-free. When I'm not proofreading or editing marketing, advertising or promotional copy I'm writing and reading short stories or throwing vessels on the potter's wheel.</p>
-          <p class="paragraph-content mob-p">I hold a BS in Journalism and French from the University of Miami as well as a Copyediting Certification from the University of Washington. I typically listen to shoegaze, folk-rock or jazz while working with words and often reward myself with pie and/or ice cream intermissions.</p>
+          <p class="paragraph-content mob-p">As a copy editor, I advocate for both the reader and the writer.
+            My job is to make certain the story is understood, the voice is consistent, and the text is error-free. When I'm not proofreading or editing copy,
+            I try to turn off that side of my brain by watching movies, throwing vessels on the potter's wheel, and reading without a red pen. I'm inspired by directors,
+            writers, and storytellers with sharp, wry senses of humor and bracing imagery such as Robert Altman, Wim Wenders, Pedro Almodóvar, Mike Mills, Charlie Kaufman, Alice Munro, and Annie Proulx.</p>
+          <p class="paragraph-content mob-p">I hold a BSC in Journalism and French from the University of Miami as well as an Editing Certificate from the University of Washington. I typically listen to shoegaze or jazz while working with words and often reward myself with pie and/or ice cream intermissions.</p>
         </div>
       <!-- </div> -->
       <!-- <div class="work-container" id="work-container"> -->
         <div class="panel-content" id="work-cont">
-          <h1 class="content-header mob-header" id="desk-header">work</h1>
-          <p class="paragraph-content mob-p">I have over five years of experience as a copy editor and writer in e-commerce, advertising, marketing, book publishing, and news media. I'm currently a proofreader for Starbucks, making sure every package, promotion, sign, and menu is in pristine written condition.</p>
-          <p class="paragraph-content mob-p">Previous employers include Fantagraphics, Capitol Hill Times, Zulily, Madrona Venture Group, and Haute Living Magazine. I'm versatile when it comes to the Oxford comma.</p>
-          <p class="paragraph-content mob-p">I offer a variety of freelance services, including line editing, copyediting, and proofreading. I'm also fluent in Spanish and French with experience in translation and localization editing. Articles, short stories, comics, zines, and ad copy are some of my preferred content. Reach out for an estimate!</p>
+          <h1 class="content-header mob-header" id="desk-header">experience</h1>
+          <p class="paragraph-content mob-p">I have over five years of experience as a copy editor and writer in e-commerce, advertising, marketing, book publishing, and news media. I'm currently a proofreader for Starbucks, making sure every package, promotion, sign, and menu is in pristine written condition. I'm versatile when it comes to the Oxford comma.</p>
+          <p class="paragraph-content mob-p">Previous employers include Fantagraphics, Capitol Hill Times, Zulily, Madrona Venture Group, and Haute Living Magazine.</p>
+          <p class="paragraph-content mob-p">From manuscripts and typeset page proofs to promotional signage and merchandise packaging, I review, edit, write, and rewrite copy for accuracy, quality, and consistency. Scroll through for a sampling of recent projects.</p>
+          <img class="work-content-examples" src="./assets/work-examples/belgianlace1.png"/>
+          <img class="work-content-examples" src="./assets/work-examples/blonde-espresso.png"/>
+          <img class="work-content-examples" src="./assets/work-examples/breakfast-menu.jpg"/>
+          <img class="work-content-examples" src="./assets/work-examples/hacienda-site.jpg"/>
+          <img class="work-content-examples" src="./assets/work-examples/frappe-menu.jpg"/>
+          <img class="work-content-examples" src="./assets/work-examples/little-lulu.png"/>
+          <img class="work-content-examples" src="./assets/work-examples/milano-menu.png"/>
+          <img class="work-content-examples" src="./assets/work-examples/otherworldbarb-1.png"/>
+          <img class="work-content-examples" src="./assets/work-examples/OtherWorldBarbara.png"/>
+          <img class="work-content-examples" src="./assets/work-examples/tolbiac2.png"/>
+          <img class="work-content-examples" src="./assets/work-examples/upstanders.jpg"/>
+          <img class="work-content-examples" src="./assets/work-examples/verona.png"/>
         </div>
       <!-- </div> -->
       <!-- <div class="contact-scroll-box" id="contact-scroll-box"> -->
         <div class="panel-content" id="contact-cont">
           <h1 class="content-header mob-header" id="desk-header">contact</h1>
-          <h2 class="lower-header mob-p" id="lower">I'd love to help you tell your story. Email me with any questions, pitches, ideas, the works.</h2>
+          <h2 class="lower-header mob-p" id="lower">I offer a variety of freelance services, including line editing, copyediting, and proofreading. I'm also fluent in Spanish and French with experience in translation and localization editing. Articles, short stories, comics, zines, and ad copy are some of my preferred content. Reach out for an estimate!</h2>
           <p class="mob-email" id="email-paragraph">sfrajlich@gmail.com</p>
         </div>
       <!-- </div> -->
