--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- <div class="work-container" id="work-container"> -->
         <div class="panel-content" id="work-cont">
           <h1 class="content-header mob-header" id="desk-header">experience</h1>
-          <p class="paragraph-content mob-p">I have over five years of experience as a copy editor and writer in e-commerce, advertising, marketing, book publishing, and news media. I'm currently a proofreader for Starbucks, making sure every package, promotion, sign, and menu is in pristine written condition. I'm versatile when it comes to the Oxford comma.</p>
+          <p class="paragraph-content mob-p">I have over five years of experience as a copy editor and writer in e-commerce, advertising, marketing, book publishing, and news media. In my current role at Starbucks I copyedit all customer touch points in stores and in the digital world, including both short social media posts and long-form printed material. I love finding hidden typos, talking with writers about dangling modifiers, and collaborating with designers and producers.</p>
           <p class="paragraph-content mob-p">Previous employers include Fantagraphics, Capitol Hill Times, Zulily, Madrona Venture Group, and Haute Living Magazine.</p>
           <p class="paragraph-content mob-p">From manuscripts and typeset page proofs to promotional signage and merchandise packaging, I review, edit, write, and rewrite copy for accuracy, quality, and consistency. Scroll through for a sampling of recent projects.</p>
           <img class="work-content-examples" src="./assets/work-examples/belgianlace1.png"/>
